--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,17 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-} */
-/* 
-html,
-body {
-  font-family: Raleway, sans-serif;  
-  background-color: #fff;
-} */
-
 footer {
   /* position: fixed;
   bottom: 0;
@@ -22,6 +8,8 @@ footer {
   padding: 0;
   height: 60px;
   background-color: #999;
+
+  /* grid-area: footer; */
 }
 
 footer .copyright {
@@ -32,7 +20,7 @@ footer .copyright {
   padding: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   footer .copyright {
     width: 100%;
   }
@@ -47,7 +35,7 @@ footer .copyright p {
   letter-spacing: 1px;
   margin: 0;
 }
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   footer .copyright p {
     text-align: center;
     padding: 0;
@@ -60,7 +48,7 @@ footer .social {
   margin: 0;
   padding: 0;
 }
-@media (max-width: 600px) {
+@media (max-width: 650px) {
   footer .social {
     width: 100%;
   }
