--- a/src/components/story/Story.scss
+++ b/src/components/story/Story.scss
@@ -41,6 +41,7 @@
     clip-path: circle(50% at 50% 50%);
     // transform: translateX(-3rem);
     position: relative;
+    overflow: hidden;
 
     @media (min-width: 900px) {
       display: inline;
